# atlas

./: .gitignore  .nowignore  .travis.yml  Cargo.toml  README.md  now.json  rustfmt.toml
.github/workflows/: book.yml  build.yml  docs.yml  engine-linux.yml  engine-macos.yml  engine-win.yml  engine.yml
assets/: Atlas.sketch
atlas/: Cargo.toml
atlas/src/: error.rs  event.rs  lib.rs
book/: book.toml  custom.css  now.json
book/src/: architecture.md  asset_loading.md  audio.md  conslusion.md  cpp_vs_rust.md  crates.md  design.md  ecosystem.md  end_goal.md  events.md  examples.md  features.md  graphics.md  hello_world.md  history_of_rust.md  introduction.md  logging.md  maths.md  objectives.md  objects.md  physics.md  planning.md  research.md  sandbox.md  stereo.md  summary.md  text.md  triangle.md  what_is_rust.md  what_to_build.md  window.md  workflow.md
book/src/architecture/: README.md  design.md  features.md
book/src/architecture/crates/: README.md  asset_loading.md  graphics.md  logging.md  window.md
book/src/evaluation/: README.md  reflection.md  research.md  workflow.md
book/src/examples/: README.md  events.md  triangle.md
book/src/implementation/: README.md  architecture.md  requirements.md  testing.md
book/src/implementation/examples/: hello_world.md
book/src/implementation/libraries/: README.md  audio.md  graphics.md  maths.md  physics.md
book/src/introduction/: README.md  ethics.md  objectives.md  risk_assessment.md  workflow.md
book/src/introduction/workflow/: README.md  management.md  methodology.md
book/src/research/: README.md  community.md  cpp_vs_rust.md  ecosystem.md  history_of_rust.md  what_is_rust.md
core/: Cargo.toml
core/src/: lib.rs
docs/: now.json
examples/: events.rs  hello_world.rs  sandbox.rs  triangle.rs  widgets.rs
examples/sandbox/: .gitignore  Cargo.toml
examples/sandbox/src/: main.rs
physics/: Cargo.toml
physics/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: config.rs  error.rs  event.rs  lib.rs
src/graphics/: mod.rs  renderer.rs  types.rs
