[package]
name = "atlas"
description = "🌈 3D game engine built using Rust"
version = "1.1.1"
authors = ["N U R O ™ <me@nuro.sh>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/nurodev/atlas"
documentation = "https://docs.atlas.nuro.sh/"
homepage = "https://atlas.nuro.sh/"
exclude = ["example", "target"]
keywords = ["3D", "game", "engine", "sdk", "atlas"]

[badges]
travis-ci = { repository = "nurodev/atlas", branch = "master" }

[lib]
name = "atlas"
path = "./src/lib.rs"

[features]
default = []
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
derive-new = "0.5.8"
env_logger = "0.6.2"
gfx-hal = "0.2.1"
log = "0.4.6"
nalgebra = "0.18.0"
quick-error = "1.2.2"
winit = "0.19.3"

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.3.0"
optional = true
features = ["winit"]

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.3.3"
optional = true
features = ["winit"]

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.3.3"
optional = true
features = ["winit"]

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
version = "0.3.3"
optional = true
features = ["winit", "x11"]
