[package]
name = "atlas"
description = "🌈 Proof-of-concept game engine built using Rust"
version = "1.1.1"
authors = ["N U R O ™ <me@nuro.sh>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/nurodev/atlas"
documentation = "https://docs.atlas.nuro.sh/"
homepage = "https://atlas.nuro.sh/"
exclude = ["example", "target"]
keywords = ["game", "engine", "atlas"]

[lib]
name = "atlas"
path = "./src/lib.rs"

[features]
opengl = ["imgui-gfx-renderer/opengl"]
default = ["opengl"]

[dependencies]
derive-new = "0.5.8"
env_logger = "0.7.1"
gfx = "0.18"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.31"
gilrs = "0.7.3"
glutin = "0.21"
image = "0.23"
imgui = "0.2.1"
imgui-gfx-renderer = "0.2.0"
imgui-winit-support = { version = "0.2.1", default-features = false, features = ["winit-19"] }
log = "0.4.8"
nalgebra = "0.18"
quick-error = "1.2.3"
rayon = "1.3.0"
