[package]
name = "atlas"
description = "🌈 Proof-of-concept game engine built using Rust"
version = "1.1.1"
authors = ["N U R O ™ <me@nuro.sh>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/nurodev/atlas"
documentation = "https://docs.atlas.nuro.sh/"
homepage = "https://atlas.nuro.sh/"
exclude = ["example", "target"]
keywords = ["game", "engine", "atlas"]

[lib]
name = "atlas"
path = "./src/lib.rs"

[features]
opengl = ["imgui-gfx-renderer/opengl"]
default = ["opengl"]

[dependencies]
derive-new = "0.5.8"
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
gfx_window_glutin = "0.31"
gilrs = "0.7.4"
glutin = "0.21"
image = "0.23"
imgui = "0.3.0"
imgui-gfx-renderer = "0.3.0"
imgui-winit-support = { version = "0.3.0", default-features = false, features = ["winit-19"] }
log = "0.4.8"
nalgebra = "0.19"
quick-error = "1.2.3"

[dev-dependencies]
env_logger = "0.7.1"
