[package]
name = "atlas"
version = "1.1.1"
authors = ["N U R O ™ <me@nuro.sh>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
ezing = "0.2.1"
gfx-hal = "0.2.1"
glam = "0.7.1"
imgui-rs = "1.47.0"
ncollide3d = "0.19.2"
noise = "0.5.1"
log = "0.4.6"
quick-error = "1.2.2"
resource = "0.2.1"
rodio = "0.9.0"
specs = "0.15.0"
tobj = "0.1.7"
winit = "0.20.0-alpha2"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2.1"

[target.'cfg(macos)'.dependencies.gfx-backend-metal]
version = "0.2.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
version = "0.2.3"
